added swagger for director api
